Implemento ventana modal para seleccionar viandas